<resources>
    <string name="app_name">Photo Album</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">About</string>

    <!--Main Activity -->
    <string name="add_new_directory">Create New Album</string>
    <string name="ok">OK</string>

    <string name="no_albums_found">We have not found any album!!\n
        Press Top-Right corner button, then "Create New Album"</string>
    <string name="delete_album">Delete</string>
    <string name="rename_album">Rename</string>
    <string name="compress_and_send">Compress and Send</string>
    <string name="details_album">Details</string>

    <!--Main Activity Context Menu -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_directory_msg">You are about to delete the directory </string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="free_version_max">In free version you can \n
        create albums a maximum of 10\n photos per album</string>

    <!--New Directory Strings -->
    <string name="folder_name_string">Album Name</string>
    <string name="folder_name_hint_string">My Album Name</string>
    <string name="loading_directory_string">Loading Photos...</string>
    <string name="file_already_exists">File name already exists!</string>
    <string name="select_directory">Select Directory: </string>
    <string name="camera_menu">Camera</string>
    <string name="whats_up_menu">WhatsApp</string>
    <string name="others_folder">Others...</string>
    <string name="add_more_photos">Add more photos</string>
    <string name="photo_properties">Photo properties</string>
    <string name="accept_new_folder">Accept new folder</string>
    <string name="no_photos_to_trash">Select the photos to delete</string>
    <string name="you_going_to_select">You are going to delete</string>
    <string name="directory_size">Number of fotos</string>
    <string name="cancel">Cancel</string>

    <!--Rename Directory -->
    <string name="rename_directory_title">Rename directory: </string>
    <string name="to">To: </string>
    <string name="new_name_hint">New name</string>
    <string name="directory_name_exist">Already exists a directory with this name.\n
        Please, choose another directory name.</string>

    <!--Compress And Send -->
    <string name="compress_file">Compress Album: </string>
    <string name="send_to">Send to: </string>
    <string name="enter_email_here">Enter destination email here</string>
    <string name="loading_directory_files">Compressing album...</string>
    <string name="numero_photos_abum">Compressing album with </string>
    <string name="photos">photos</string>
    <string name="in"> in </string>
    <string name="emails">emails</string>
    <string name="message_wrong_email">Email must have "@"</string>

    <!--Send Email Info -->
    <string name="sending_email_to">Sending email to: </string>
    <string name="with_files">With this Files: </string>
    <string name="no_client_installed">There are no email clients installed</string>
    <string name="email_subject">App PhotoAlbum</string>
    <string name="email_body">This email contains the selected and compressed album from App PhotoAlbum</string>
    <string name="size">Size: </string>
    <string name="press_ok_confirm">Click OK to confirm sending</string>
</resources>
