<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_rename"
        android:title="@string/rename_album"
        android:orderInCategory="1" />

    <item
        android:id="@+id/action_compress_send"
        android:title="@string/compress_and_send"
        android:orderInCategory="2"
        myapp:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_album"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="3"
        myapp:showAsAction="never" />

    <item android:id="@+id/action_details"
        android:title="@string/details_album"
        android:orderInCategory="4"
        myapp:showAsAction="never" />
</menu>