<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/txtRenameDirTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/rename_directory_title"/>

        <TextView
            android:id="@+id/txtRenameDirName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtRenameDirTo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/to"/>

        <EditText
            android:id="@+id/eTextNewName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:hint="@string/new_name_hint"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textStyle="italic"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true">
            <ImageButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/del_btn"/>
            <ImageButton
                android:id="@+id/acceptBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ok_btn"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
