<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#f2f9f9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/txtCompressDirTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/compress_file"/>
        <TextView
            android:id="@+id/txtCompressDirName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/txtCompressSendTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/send_to"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ddfafd"
                android:src="@drawable/email"/>
        </LinearLayout>

        <EditText
            android:id="@+id/eTextDestinationMail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/enter_email_here"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:inputType="text"
            android:imeOptions="actionDone"/>

    </LinearLayout>


    <!--Aditional Info Here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/txtCompressingMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/txtCompressingMessage2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="italic"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true">
            <ImageButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/del_btn"/>
            <ImageButton
                android:id="@+id/acceptBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ok_btn"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
